--- a/salt/nginx/nginx.conf
+++ b/salt/nginx/nginx.conf
@@ -50,8 +50,8 @@ http {
             proxy_pass http://localhost:8080;
         }
         
-        location /static {
-            root /usr/share/nginx/static;        
+        location /static/ {
+            root /usr/share/nginx/;        
         }
 
         error_page 404 /404.html;
